<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">ImpairCheck</string>

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum face results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum face results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of face detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of face detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_questionnaire">Questionnaire</string>
    <string name="menu_face_detection">Face Detection</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the face landmarker.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_face_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_face_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_face_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_faces">Number of Faces</string>
    <string name="label_delegate">Delegate</string>
    <string name="questionnaire_title">Drug Test</string>
    <string name="move_analysis">Move Analysis</string>
    <string name="start_screen_title">Fill the required data</string>
    <string name="user_profile_screen_title">Profile Details</string>
    <string name="last_test_date">Last Test Date :</string>
    <string name="last_test_score">"Last test score: "</string>
    <string name="retest">Re-Test</string>
    <string name="dialog_message">Please make sure to be on camera all the test journey and open your eyes and get close to camera. If you disappeared along the test you will fail immediately and need to retest again</string>
    <string name="dialog_title">Important</string>
    <string name="dialog_go_to_move_analysis_message">Make sure that the device is in a stand mode and the camera get your whole body to make sure that you apply the task</string>
    <string name="first_pose_description">"You will stand on your **RIGHT LEG** for 15 seconds please follow the instructions below \n \n \n \n \n make sure that your whole body is visible to camera  "</string>
    <string name="second_pose_description">"You will stand on your **LEFT LEG** for 15 seconds please follow the instructions below \n \n \n \n \n make sure that your whole body is visible to camera  "</string>
    <string name="make_sure_first_pose_visible">Stand on your right leg and show your whole body</string>
    <string name="make_sure_second_pose_visible">Stand on your left leg and show your whole body</string>
    <string name="finish_description">Thank you for doing this test click Next to move to next step</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
</resources>
