<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/gallery_fragment"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:title="@string/menu_gallery" />

    <item
        android:id="@id/camera_fragment"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/menu_camera" />

    <item
        android:id="@id/questionnaire_fragment"
        android:icon="@drawable/tasks_icon"
        android:title="@string/menu_questionnaire" />

    <item
        android:id="@id/registrationFragment"
        android:icon="@drawable/face_detection_icon"
        android:title="@string/menu_face_detection" />

    <item
        android:id="@id/moveAnalysisFragment"
        android:icon="@drawable/move_analysis_ic"
        android:title="@string/move_analysis" />




</menu>
