<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fillStart" />

    <com.impaircheck.overlays.PoseOverlayView
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <TextView
        android:id="@+id/Pose_hint_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        Tools:text="dd"
        />

    <LinearLayout
        android:id="@+id/first_pose_description_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        Tools:visibility="gone"
        android:background="@color/mp_color_primary">

        <TextView
            android:id="@+id/first_pose_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"

            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/first_pose_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_first_pose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="Start" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/second_pose_description_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/mp_color_primary">

        <TextView
            android:id="@+id/second_pose_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"

            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/second_pose_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_second_pose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="Start" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/finish_description_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/mp_color_primary">

        <TextView
            android:id="@+id/finish_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"

            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/finish_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="Next" />

    </LinearLayout>



</RelativeLayout>
